WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78291
FrameView::addSlowRepaintObject() doesn't update m_canBlitOnScroll correctly
https://bugs.webkit.org/show_bug.cgi?id=78291
Summary
FrameView::addSlowRepaintObject() doesn't update m_canBlitOnScroll correctly
Anders Carlsson
Reported
2012-02-09 15:29:25 PST
FrameView::addSlowRepaintObject() doesn't update m_canBlitOnScroll correctly
Attachments
Patch
(1.76 KB, patch)
2012-02-09 15:32 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-02-09 15:32:03 PST
Created
attachment 126388
[details]
Patch
mitz
Comment 2
2012-02-09 15:38:38 PST
Comment on
attachment 126388
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=126388&action=review
> Source/WebCore/page/FrameView.cpp:1332 > m_slowRepaintObjectCount++; > + if (m_slowRepaintObjectCount == 1)
This is one case where I think collapsing this into a single line would have made things clearer: if (!m_slowRepaintObjectCount++)
Anders Carlsson
Comment 3
2012-02-09 17:55:00 PST
Committed
r107332
: <
http://trac.webkit.org/changeset/107332
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug