FrameView::addSlowRepaintObject() doesn't update m_canBlitOnScroll correctly https://bugs.webkit.org/show_bug.cgi?id=78291

Reviewed by Dan Bernstein.

m_slowRepaintObjectCount needs to be incremented before calling updateCanBlitOnScrollRecursively(),
because otherwise useSlowRepaints() will return false even though we have to use slow repaints.

I was unable to make a layout test for this because it requires that updateCanBlitOnScrollRecursively() isn't
called again after m_slowRepaintObjectCount has been incremented.

* page/FrameView.cpp:
(WebCore::FrameView::addSlowRepaintObject):

Canonical link: https://commits.webkit.org/95211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107332 268f45cc-cd09-0410-ab3c-d52691b4dbfc